tests/fixtures/invalid/pow_bool_str_dict.py
# Cannot call pow() with Bool, Str, Dict[str, int]
x = pow(True, "hello", {"a": 1})
